--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "directories": {
     "lib": "./lib"
   },
-  "main": "./lib/index.js",
+  "main": "./lib/index",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/MySportsFeeds/mysportsfeeds-node.git"
