--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "lib": "./lib"
   },
   "main": "./lib/index",
+  "engines": [
+    "node"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/MySportsFeeds/mysportsfeeds-node.git"
